// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comment 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "comment": [
                  {
                    "children": {
                      "LComment": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{#",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{#/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LComment",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                      "RComment": [
                        {
                          "endColumn": 5,
                          "endLine": 1,
                          "endOffset": 4,
                          "image": "#}",
                          "startColumn": 4,
                          "startLine": 1,
                          "startOffset": 3,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /#\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RComment",
                            "tokenTypeIdx": 7,
                          },
                          "tokenTypeIdx": 7,
                        },
                      ],
                    },
                    "name": "comment",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Comment 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "comment": [
                  {
                    "children": {
                      "Comment": [
                        {
                          "endColumn": 20,
                          "endLine": 1,
                          "endOffset": 19,
                          "image": "This is a comment",
                          "startColumn": 4,
                          "startLine": 1,
                          "startOffset": 3,
                          "tokenType": {
                            "CATEGORIES": [],
                            "LINE_BREAKS": true,
                            "PATTERN": /\\[\\\\S\\\\s\\]\\*\\?\\(\\?=\\\\s\\*#\\}\\)/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "Comment",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "LComment": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{#",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{#/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LComment",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                      "RComment": [
                        {
                          "endColumn": 23,
                          "endLine": 1,
                          "endOffset": 22,
                          "image": "#}",
                          "startColumn": 22,
                          "startLine": 1,
                          "startOffset": 21,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /#\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RComment",
                            "tokenTypeIdx": 7,
                          },
                          "tokenTypeIdx": 7,
                        },
                      ],
                    },
                    "name": "comment",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Comment 3`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "comment": [
                  {
                    "children": {
                      "Comment": [
                        {
                          "endColumn": 15,
                          "endLine": 3,
                          "endOffset": 32,
                          "image": "First line
    Second line",
                          "startColumn": 5,
                          "startLine": 2,
                          "startOffset": 7,
                          "tokenType": {
                            "CATEGORIES": [],
                            "LINE_BREAKS": true,
                            "PATTERN": /\\[\\\\S\\\\s\\]\\*\\?\\(\\?=\\\\s\\*#\\}\\)/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "Comment",
                            "tokenTypeIdx": 8,
                          },
                          "tokenTypeIdx": 8,
                        },
                      ],
                      "LComment": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{#",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{#/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LComment",
                            "tokenTypeIdx": 6,
                          },
                          "tokenTypeIdx": 6,
                        },
                      ],
                      "RComment": [
                        {
                          "endColumn": 4,
                          "endLine": 4,
                          "endOffset": 37,
                          "image": "#}",
                          "startColumn": 3,
                          "startLine": 4,
                          "startOffset": 36,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /#\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RComment",
                            "tokenTypeIdx": 7,
                          },
                          "tokenTypeIdx": 7,
                        },
                      ],
                    },
                    "name": "comment",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Number 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 7,
                          "endLine": 1,
                          "endOffset": 6,
                          "image": "}}",
                          "startColumn": 6,
                          "startLine": 1,
                          "startOffset": 5,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 10,
                          },
                          "tokenTypeIdx": 10,
                        },
                      ],
                      "expression": [
                        {
                          "children": {
                            "literal": [
                              {
                                "children": {
                                  "numberLiteral": [
                                    {
                                      "children": {
                                        "Number": [
                                          {
                                            "endColumn": 4,
                                            "endLine": 1,
                                            "endOffset": 3,
                                            "image": "0",
                                            "startColumn": 4,
                                            "startLine": 1,
                                            "startOffset": 3,
                                            "tokenType": {
                                              "CATEGORIES": [],
                                              "PATTERN": /\\[0-9\\]\\+\\(\\?:\\\\\\.\\[0-9\\]\\+\\)\\?\\(\\[Ee\\]\\[\\\\\\+\\\\-\\]\\[0-9\\]\\+\\)\\?/,
                                              "categoryMatches": [],
                                              "categoryMatchesMap": {},
                                              "isParent": false,
                                              "name": "Number",
                                              "tokenTypeIdx": 4,
                                            },
                                            "tokenTypeIdx": 4,
                                          },
                                        ],
                                      },
                                      "name": "numberLiteral",
                                    },
                                  ],
                                },
                                "name": "literal",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Number 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 8,
                          "endLine": 1,
                          "endOffset": 7,
                          "image": "}}",
                          "startColumn": 7,
                          "startLine": 1,
                          "startOffset": 6,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 10,
                          },
                          "tokenTypeIdx": 10,
                        },
                      ],
                      "expression": [
                        {
                          "children": {
                            "literal": [
                              {
                                "children": {
                                  "numberLiteral": [
                                    {
                                      "children": {
                                        "Number": [
                                          {
                                            "endColumn": 5,
                                            "endLine": 1,
                                            "endOffset": 4,
                                            "image": "42",
                                            "startColumn": 4,
                                            "startLine": 1,
                                            "startOffset": 3,
                                            "tokenType": {
                                              "CATEGORIES": [],
                                              "PATTERN": /\\[0-9\\]\\+\\(\\?:\\\\\\.\\[0-9\\]\\+\\)\\?\\(\\[Ee\\]\\[\\\\\\+\\\\-\\]\\[0-9\\]\\+\\)\\?/,
                                              "categoryMatches": [],
                                              "categoryMatchesMap": {},
                                              "isParent": false,
                                              "name": "Number",
                                              "tokenTypeIdx": 4,
                                            },
                                            "tokenTypeIdx": 4,
                                          },
                                        ],
                                      },
                                      "name": "numberLiteral",
                                    },
                                  ],
                                },
                                "name": "literal",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Number 3`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 11,
                          "endLine": 1,
                          "endOffset": 10,
                          "image": "}}",
                          "startColumn": 10,
                          "startLine": 1,
                          "startOffset": 9,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 10,
                          },
                          "tokenTypeIdx": 10,
                        },
                      ],
                      "expression": [
                        {
                          "children": {
                            "literal": [
                              {
                                "children": {
                                  "numberLiteral": [
                                    {
                                      "children": {
                                        "Number": [
                                          {
                                            "endColumn": 8,
                                            "endLine": 1,
                                            "endOffset": 7,
                                            "image": "42.23",
                                            "startColumn": 4,
                                            "startLine": 1,
                                            "startOffset": 3,
                                            "tokenType": {
                                              "CATEGORIES": [],
                                              "PATTERN": /\\[0-9\\]\\+\\(\\?:\\\\\\.\\[0-9\\]\\+\\)\\?\\(\\[Ee\\]\\[\\\\\\+\\\\-\\]\\[0-9\\]\\+\\)\\?/,
                                              "categoryMatches": [],
                                              "categoryMatchesMap": {},
                                              "isParent": false,
                                              "name": "Number",
                                              "tokenTypeIdx": 4,
                                            },
                                            "tokenTypeIdx": 4,
                                          },
                                        ],
                                      },
                                      "name": "numberLiteral",
                                    },
                                  ],
                                },
                                "name": "literal",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`String 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 19,
                          "endLine": 1,
                          "endOffset": 18,
                          "image": "}}",
                          "startColumn": 18,
                          "startLine": 1,
                          "startOffset": 17,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 10,
                          },
                          "tokenTypeIdx": 10,
                        },
                      ],
                      "expression": [
                        {
                          "children": {
                            "literal": [
                              {
                                "children": {
                                  "stringLiteral": [
                                    {
                                      "children": {
                                        "String": [
                                          {
                                            "endColumn": 16,
                                            "endLine": 1,
                                            "endOffset": 15,
                                            "image": "\\"Hello world\\"",
                                            "startColumn": 4,
                                            "startLine": 1,
                                            "startOffset": 3,
                                            "tokenType": {
                                              "CATEGORIES": [],
                                              "PATTERN": /"\\(\\[\\^#"\\\\\\\\\\]\\*\\(\\?:\\\\\\\\\\.\\[\\^#"\\\\\\\\\\]\\*\\)\\*\\)"\\|'\\(\\[\\^'\\\\\\\\\\]\\*\\(\\?:\\\\\\\\\\.\\[\\^'\\\\\\\\\\]\\*\\)\\*\\)'/,
                                              "categoryMatches": [],
                                              "categoryMatchesMap": {},
                                              "isParent": false,
                                              "name": "String",
                                              "tokenTypeIdx": 5,
                                            },
                                            "tokenTypeIdx": 5,
                                          },
                                        ],
                                      },
                                      "name": "stringLiteral",
                                    },
                                  ],
                                },
                                "name": "literal",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`String 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 19,
                          "endLine": 1,
                          "endOffset": 18,
                          "image": "}}",
                          "startColumn": 18,
                          "startLine": 1,
                          "startOffset": 17,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 10,
                          },
                          "tokenTypeIdx": 10,
                        },
                      ],
                      "expression": [
                        {
                          "children": {
                            "literal": [
                              {
                                "children": {
                                  "stringLiteral": [
                                    {
                                      "children": {
                                        "String": [
                                          {
                                            "endColumn": 16,
                                            "endLine": 1,
                                            "endOffset": 15,
                                            "image": "'Hello world'",
                                            "startColumn": 4,
                                            "startLine": 1,
                                            "startOffset": 3,
                                            "tokenType": {
                                              "CATEGORIES": [],
                                              "PATTERN": /"\\(\\[\\^#"\\\\\\\\\\]\\*\\(\\?:\\\\\\\\\\.\\[\\^#"\\\\\\\\\\]\\*\\)\\*\\)"\\|'\\(\\[\\^'\\\\\\\\\\]\\*\\(\\?:\\\\\\\\\\.\\[\\^'\\\\\\\\\\]\\*\\)\\*\\)'/,
                                              "categoryMatches": [],
                                              "categoryMatchesMap": {},
                                              "isParent": false,
                                              "name": "String",
                                              "tokenTypeIdx": 5,
                                            },
                                            "tokenTypeIdx": 5,
                                          },
                                        ],
                                      },
                                      "name": "stringLiteral",
                                    },
                                  ],
                                },
                                "name": "literal",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`String 3`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 18,
                          "endLine": 1,
                          "endOffset": 17,
                          "image": "}}",
                          "startColumn": 17,
                          "startLine": 1,
                          "startOffset": 16,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 10,
                          },
                          "tokenTypeIdx": 10,
                        },
                      ],
                      "expression": [
                        {
                          "children": {
                            "literal": [
                              {
                                "children": {
                                  "stringLiteral": [
                                    {
                                      "children": {
                                        "String": [
                                          {
                                            "endColumn": 15,
                                            "endLine": 1,
                                            "endOffset": 14,
                                            "image": "'It\\\\'s good'",
                                            "startColumn": 4,
                                            "startLine": 1,
                                            "startOffset": 3,
                                            "tokenType": {
                                              "CATEGORIES": [],
                                              "PATTERN": /"\\(\\[\\^#"\\\\\\\\\\]\\*\\(\\?:\\\\\\\\\\.\\[\\^#"\\\\\\\\\\]\\*\\)\\*\\)"\\|'\\(\\[\\^'\\\\\\\\\\]\\*\\(\\?:\\\\\\\\\\.\\[\\^'\\\\\\\\\\]\\*\\)\\*\\)'/,
                                              "categoryMatches": [],
                                              "categoryMatchesMap": {},
                                              "isParent": false,
                                              "name": "String",
                                              "tokenTypeIdx": 5,
                                            },
                                            "tokenTypeIdx": 5,
                                          },
                                        ],
                                      },
                                      "name": "stringLiteral",
                                    },
                                  ],
                                },
                                "name": "literal",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Template 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {},
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Template 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "text": [
                  {
                    "children": {
                      "Text": [
                        {
                          "endColumn": 11,
                          "endLine": 1,
                          "endOffset": 10,
                          "image": "Hello world",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "LINE_BREAKS": true,
                            "PATTERN": [Function],
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "Text",
                            "tokenTypeIdx": 20,
                          },
                          "tokenTypeIdx": 20,
                        },
                      ],
                    },
                    "name": "text",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Variable 1`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 5,
                          "endLine": 1,
                          "endOffset": 4,
                          "image": "}}",
                          "startColumn": 4,
                          "startLine": 1,
                          "startOffset": 3,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 10,
                          },
                          "tokenTypeIdx": 10,
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;

exports[`Variable 2`] = `
{
  "children": {
    "elements": [
      {
        "children": {
          "element": [
            {
              "children": {
                "variable": [
                  {
                    "children": {
                      "LVariable": [
                        {
                          "endColumn": 2,
                          "endLine": 1,
                          "endOffset": 1,
                          "image": "{{",
                          "startColumn": 1,
                          "startLine": 1,
                          "startOffset": 0,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\{\\{\\[-~\\]\\?/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "LVariable",
                            "tokenTypeIdx": 9,
                          },
                          "tokenTypeIdx": 9,
                        },
                      ],
                      "RVariable": [
                        {
                          "endColumn": 8,
                          "endLine": 1,
                          "endOffset": 7,
                          "image": "}}",
                          "startColumn": 7,
                          "startLine": 1,
                          "startOffset": 6,
                          "tokenType": {
                            "CATEGORIES": [],
                            "PATTERN": /\\[-~\\]\\?\\}\\}/,
                            "categoryMatches": [],
                            "categoryMatchesMap": {},
                            "isParent": false,
                            "name": "RVariable",
                            "tokenTypeIdx": 10,
                          },
                          "tokenTypeIdx": 10,
                        },
                      ],
                      "expression": [
                        {
                          "children": {
                            "literal": [
                              {
                                "children": {
                                  "numberLiteral": [
                                    {
                                      "children": {
                                        "Number": [
                                          {
                                            "endColumn": 5,
                                            "endLine": 1,
                                            "endOffset": 4,
                                            "image": "42",
                                            "startColumn": 4,
                                            "startLine": 1,
                                            "startOffset": 3,
                                            "tokenType": {
                                              "CATEGORIES": [],
                                              "PATTERN": /\\[0-9\\]\\+\\(\\?:\\\\\\.\\[0-9\\]\\+\\)\\?\\(\\[Ee\\]\\[\\\\\\+\\\\-\\]\\[0-9\\]\\+\\)\\?/,
                                              "categoryMatches": [],
                                              "categoryMatchesMap": {},
                                              "isParent": false,
                                              "name": "Number",
                                              "tokenTypeIdx": 4,
                                            },
                                            "tokenTypeIdx": 4,
                                          },
                                        ],
                                      },
                                      "name": "numberLiteral",
                                    },
                                  ],
                                },
                                "name": "literal",
                              },
                            ],
                          },
                          "name": "expression",
                        },
                      ],
                    },
                    "name": "variable",
                  },
                ],
              },
              "name": "element",
            },
          ],
        },
        "name": "elements",
      },
    ],
  },
  "name": "template",
}
`;
